Added Test cases - GET comments endpoint & fixed Maven build errors